--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>i can understand</p>
-    <p>look mama!! i can push to github</p>
+    <h1>ha! ki prame</h1>
+    <h2>Rafayatul+anu-kabbo</h2>
 </body>
 </html>
